# bamm

./: .gitignore  CMakeLists.txt
src/: AcceptanceDataWriter.cpp  Autotune.cpp  BetaInitProposal.cpp  BetaShiftProposal.cpp  BetaTimeModeProposal.cpp  BetaTimeModeProposal.h  BranchEvent.cpp  BranchEvent.h  BranchHistory.cpp  BranchHistory.h  ChainSwapDataWriter.cpp  EventNumberForBranchProposal.cpp  EventNumberProposal.cpp  EventNumberProposal.h  EventParameterProposal.cpp  EventRateProposal.cpp  FastSimulatePrior.cpp  Fossil.cpp  Fossil.h  JumpProposal.cpp  JumpProposal.h  LambdaInitProposal.cpp  LambdaShiftProposal.cpp  LambdaTimeModeProposal.cpp  Log.cpp  MCMC.cpp  MCMC.h  Makefile  MbRandom.cpp  MetropolisCoupledMCMC.cpp  MetropolisCoupledMCMC.h  Model.cpp  Model.h  ModelDataWriter.h  MoveEventProposal.cpp  MoveEventProposal.h  MuInitProposal.cpp  MuShiftProposal.cpp  Node.cpp  Node.h  (+38 more)
testdata/: testL.R  testtree  traitcon  traitmodel.txt  traitmodeldata.txt  whalecon  whaletrait
